fix edit page on smaller devices

--- a/public/stylesheets/edit.css
+++ b/public/stylesheets/edit.css
@@ -44,7 +44,7 @@ container {
   transition: .4s;
 }
 
-@media (max-width: 281px){
+@media (max-width: 481px){
   container {
     width: 260px;
   }
